k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hep-energy
  namespace: hep-energy
  labels:
    app.kubernetes.io/name: hep-energy
spec:
  selector:
    app.kubernetes.io/name: hep-energy
  ports:
    - name: http
      port: 80
      targetPort: http
